adds translation and minot fixes
polish default, fix card padding, fix missing home
css, improves some validation errors view,  remove forbsub key column
from trials index, add admin email to secrets

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -28,6 +28,10 @@ body {
   overflow-x: hidden;
 }
 
+.card {
+  padding: 0;
+}
+
 // --------------------------------------------------------------------------------
 // -----------------------      FOR MAIN NAVBAR            ------------------------
 // --------------------------------------------------------------------------------
