--- a/app/assets/stylesheets/common/scaffolds.scss
+++ b/app/assets/stylesheets/common/scaffolds.scss
@@ -8,10 +8,10 @@
 }
 
 #error-explanation {
-  width: 450px;
-  border: 2px solid red;
-  padding: 7px;
-  padding-bottom: 0;
-  margin-bottom: 20px;
-  background-color: #f0f0f0;
+  // width: 450px;
+  // border: 2px solid red;
+  // padding: 7px;
+  // padding-bottom: 0;
+  // margin-bottom: 20px;
+  // background-color: #f0f0f0;
 }
