--- a/app/views/committees/new.html.haml
+++ b/app/views/committees/new.html.haml
@@ -1,9 +1,9 @@
 .row.second-bar
   = render template: 'shared/breadcrumbs',
-  locals: { final_title: 'New Committee' }
+  locals: { final_title: t(:new_committee) }
 
 .row
   .col-md-4.offset-md-4
     = render 'form', committee: @committee
 
-    = link_to 'Back', committees_path, class: 'btn btn-secondary'
+    = link_to t(:back), committees_path, class: 'btn btn-secondary'
