--- a/app/views/trials/_status_options.html.haml
+++ b/app/views/trials/_status_options.html.haml
@@ -2,8 +2,8 @@
   = form_for [committee, trial], html: { class: 'float-right' } do |f|
     = f.hidden_field :status, value: 'accepted'
     = f.hidden_field :referer, value: committee_trials_path(committee)
-    = f.submit 'Accept', class: 'btn btn-sm btn-success'
+    = f.submit t(:accept), class: 'btn btn-sm btn-success'
   = form_for [committee, trial], html: { class: 'float-right' } do |f|
     = f.hidden_field :status, value: 'rejected'
     = f.hidden_field :referer, value: committee_trials_path(committee)
-    = f.submit 'Reject', class: 'btn btn-sm btn-danger'
+    = f.submit t(:reject), class: 'btn btn-sm btn-danger'
