--- a/app/views/trials/private_key_monit.html.haml
+++ b/app/views/trials/private_key_monit.html.haml
@@ -1,6 +1,6 @@
 .row.second-bar
   = render template: 'shared/breadcrumbs',
-  locals: { final_title: 'Trial authentication' }
+  locals: { final_title: t(:trial_authentication) }
 
 = render 'shared/alerts'
 
@@ -9,12 +9,19 @@
   .col-md-6.offset-md-3
     = form_for :trial, url: [@committee, @trial] do |f|
       - if @trial.errors.any?
-        #error-explanation
-          %ul
-            - @trial.errors.full_messages.each do |msg|
-              %li= msg
+        .container-fluid
+          .card.card-outline-danger#error-explanation
+            .card-block
+              %h4
+                = t('errors', count: @trial.errors.count)
+                = t('error_message', count: @trial.errors.count)
+              %ul.list-group
+                - @trial.errors.full_messages.each do |msg|
+                  %li.list-group-item= msg
+        .ls40
+
       .field.form-group
         = f.label :private_key
         = f.text_field :private_key, class: 'form-control'
       .actions
-        = f.submit 'Authorize', class: 'btn btn-success float-right'
+        = f.submit t(:authorize), class: 'btn btn-success float-right'
