--- a/app/views/trials/_trials_table.html.haml
+++ b/app/views/trials/_trials_table.html.haml
@@ -7,6 +7,7 @@
           %th= t(:title)
           %th= t(:deadline)
           %th= t(:rank)
+          %th= t(:environment)
           %th= t(:state)
           - unless defined? hide_options
             %th
@@ -17,6 +18,7 @@
             %td= link_to trial.title, [committee, trial]
             %td= l(trial.deadline, format: :month_year)
             %td= trial.rank.name
+            %td= trial.environment.name
             %td
               %span.badge{ style: style_for_trial_badge(trial,
               stateman_trials) }
