--- a/app/views/trials/edit.html.haml
+++ b/app/views/trials/edit.html.haml
@@ -3,4 +3,5 @@
   locals: { final_title: t(:edit_trial) }
 
 .row
-  = render 'form', trial: @trial, ranks: @committee.ranks
+  = render 'form', trial: @trial, ranks: @committee.ranks,
+  environments: @committee.environments
