--- a/app/views/committees/edit.html.haml
+++ b/app/views/committees/edit.html.haml
@@ -1,9 +1,60 @@
 .row.second-bar
   = render template: 'shared/breadcrumbs', locals: { final_title: t(:edit) }
 
+= render 'shared/alerts'
 .row
-  .col-md-4.offset-md-4
+  .col-md-8.offset-md-2.col-xl-6.offset-xl-3
     .ls60
+    %h2= t(:edit_committee)
+    %hr
     = render 'form', committee: @committee
 
     = link_to t(:back), committees_path, class: 'btn btn-secondary'
+
+    .ls60
+    %h2= t(:edit_committee_ranks)
+    %hr
+
+    %ul.list-group
+      - @ranks.each do |rank|
+        %li.list-group-item.show-on-hover-parent
+          .col-lg-11.col-sm-10
+            .btn-sm= rank.name
+          .col-lg-1.col-sm-2.show-on-hover= link_to t(:delete),
+          [@committee, rank], method: :delete, class: 'btn btn-sm btn-warning'
+
+      %li.list-group-item
+        = form_for [@committee, @rank], html: { class: 'form-inline' } do |f|
+          = f.label :name, class: 'sr-only'
+          .input-group
+            .input-group-addon= t(:add_rank)
+            = f.text_field :name, class: 'form-control'
+            .input-group-addon
+              = f.submit t(:add), class: 'btn btn-sm'
+
+    .ls60
+    %h2= t(:edit_committee_environments)
+    %hr
+
+    %ul.list-group
+      - @environments.each do |environment|
+        %li.list-group-item.show-on-hover-parent
+          .col-lg-10.col-md-6.col-sm-8
+            .btn-sm
+              = environment.name
+              (#{environment.supervisor_name || t(:no_supervisor)})
+          .col-lg-1.col-md-3.col-sm-2.show-on-hover= link_to t(:edit), [:edit,
+          @committee, environment], class: 'btn btn-sm btn-secondary'
+          .col-lg-1.col-md-3.col-sm-2.show-on-hover= link_to t(:delete),
+          [@committee, environment], method: :delete,
+          class: 'btn btn-sm btn-warning'
+
+      %li.list-group-item
+        = form_for [@committee, @environment],
+        html: { class: 'form-inline' } do |f|
+          = f.label :name, class: 'sr-only'
+          .input-group
+            .input-group-addon= t(:add_environment)
+            = f.text_field :name, class: 'form-control'
+            .input-group-addon
+              = f.submit t(:add), class: 'btn btn-sm'
