add zaki specific states to organization with logic
overdue_state_id - trial automatically goes to this state if deadline is
passed and this state is reachable
positive_finish_state_id, negative_finish_state_id - constraints accept
/ reject buttons
stateman state resource class fixes
set state logic moved to model (fix!)
committee cached in instance variable (trial model)
fix committee error explanation

--- a/app/views/committees/edit.html.haml
+++ b/app/views/committees/edit.html.haml
@@ -7,7 +7,7 @@
     .ls60
     %h2= t(:edit_committee)
     %hr
-    = render 'form', committee: @committee
+    = render 'form', committee: @committee, states: @states
 
     = link_to t(:back), committees_path, class: 'btn btn-secondary'
 
