--- a/app/views/committees/_form.html.haml
+++ b/app/views/committees/_form.html.haml
@@ -1,15 +1,34 @@
 = form_for committee do |f|
   - if committee.errors.any?
-    #error-explanation
-      %h2
-        = t('errors', count: committee.errors.count)
-        = t('error_message', count: committee.errors.count)
-      %ul
-        - committee.errors.full_messages.each do |msg|
-          %li= msg
+    .container-fluid
+      .col-lg-10.offset-lg-1
+        .card.card-outline-danger#error-explanation
+          .card-block
+            %h4
+              = t('errors', count: committee.errors.count)
+              = t('error_message', count: committee.errors.count)
+            %ul.list-group
+              - committee.errors.full_messages.each do |msg|
+                %li.list-group-item= msg
+    .ls40
 
   .field.form-group
     = f.label :name
     = f.text_field :name, class: 'form-control'
+  - unless action_name == 'new'
+    .field.form-group
+      = f.label :overdue_state_id
+      = f.select :overdue_state_id, states.collect { |s| [s.name, s.id] },
+      { include_blank: true }, class: 'custom-select form-control'
+    .field.form-group
+      = f.label :positive_finish_state_id
+      = f.select :positive_finish_state_id,
+      states.collect { |s| [s.name, s.id] },
+      { include_blank: true }, class: 'custom-select form-control'
+    .field.form-group
+      = f.label :negative_finish_state_id
+      = f.select :negative_finish_state_id,
+      states.collect { |s| [s.name, s.id] },
+      { include_blank: true }, class: 'custom-select form-control'
   .actions.d-inline-block.float-right
     = f.submit t(:save), class: 'btn btn-success'
