--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,6 +38,19 @@ body {
   .show-on-hover-parent:hover .show-on-hover {
     display: inherit;
   }
+
+  .pointer {
+    cursor: pointer;
+  }
+
+  .full-page-row {
+    min-height: calc(100vh - 100px);
+
+    .list-group-item b::after {
+      content: " ";
+      white-space: pre;
+    }
+  }
 }
 
 .card {
@@ -96,7 +109,7 @@ body {
     margin-left: 10px;
 
     @media (max-width: 575px) {
-      width: 100vh;
+      width: 100%;
       margin: 5px 0;
       border-radius: 3px !important;
     }
