--- a/app/assets/stylesheets/trials.scss
+++ b/app/assets/stylesheets/trials.scss
@@ -1,3 +1,9 @@
 // Place all the styles related to the trials controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.td-square {
+  width: 60px;
+  height: 60px;
+  text-align: center;
+}
