add pre pending (created) flow
add mimimum task count for committee, allows to authorize trial by
private key also, permitt only pending trials for formsub, add created
status to trial (change default), add confirm to pending mechanism, adds
proper user messages (alerts and modals),

--- a/app/views/committees/_form.html.haml
+++ b/app/views/committees/_form.html.haml
@@ -15,6 +15,9 @@
   .field.form-group
     = f.label :name
     = f.text_field :name, class: 'form-control'
+  .field.form-group
+    = f.label :min_trial_tasks_count
+    = f.number_field :min_trial_tasks_count, class: 'form-control'
   - unless action_name == 'new'
     .field.form-group
       = f.label :overdue_state_id
